@@ -17,4 +17,7 @@ errordir = $(privdatadir)/errors
 	$(top_builddir)/e-util/e-error-tool $^
 
 BUILT_SOURCES = $(error_i18n)
-EXTRA_DIST = $(error_DATA) $(error_i18n)
+EXTRA_DIST = 						\
+	$(error_DATA)					\
+	$(error_i18n)					\
+	org-gnome-mailing-list-actions.eplug.in
