@@ -1,3 +1,7 @@
+2004-11-09  Rodney Dawes  <dobey@novell.com>
+
+	* Makefile.am: Add the eplug.in file to EXTRA_DIST
+
 2004-11-05  JP Rosevear  <jpr@novell.com>
 
 	* mailing-list-actions.c: include <config.h> for GETTEXT_PACKAGE
